# Dijkstra_map_for_Godot

./: .gitattributes  .gitignore  Cargo.toml  DOCUMENTATION.md  LICENSE  README.md  arrow.png.import  arrow.png~  dijkstra_map.gdns  dijkstra_map_library.tres  djikstra map for godot.csproj  djikstra map for godot.sln  dm_icon.png.import  project.godot
.github/workflows/: do_not_manually_update_binaries.yml  make_release.yml  run_tests.yml
API demo/: IDijkstra.gd  basic_wrapper.gd  demo.gd  demo.tscn
API demo/dependancy/: arrow.png.import  arrow.tscn  gui_manager.gd  mybutton.tscn
APIi demo/: demo.gd  demo.tscn
Dijkstra_map_library/: dijkstra_map.gdns  dijkstra_map_library.tres  gdnativelibrary.tres  nativescript.gdns
Project Example/: TileMap.gd  Turn based.tscn  dragon_attack.tscn  project_example.tscn  tileset.tres  turn_based.gd
Project Example/dependancy/: Archer.gd  Archer_32x32.png.import  Pikeman.gd  Pikeman.tscn  TB_tilemap.gd  TileMap.gd  knight.gd  (+5 more)
Project_Example/: Turn based.tscn  project_example.tscn
Tests/: Gut.tscn
dijkstra-map/: Cargo.toml
dijkstra-map-gd/: Cargo.toml  build.rs  gdnative-doc.toml
documentation/: all.html  index.html  sidebar-items.js  struct.DijkstraMap.html
example/: Archer.gd  Archer.tscn  Archer_32x32.png.import  Pikeman.tscn  TileMap.gd  dragon.png.import  dragon_attack.tscn  pikeman_32x32.png.import  tileset_32x32.png.import
src/: get_maps.rs  getters.rs  godot_interface.rs  grids.rs  lib.rs  lib.rs~  setters.rs
visualization demo/: arrows.png.import  gradient.png.import  gridmap.gd  visualisation.tscn
(+47 files in other folders)
