[package]
name = "dijkstra_map_for_godot"
version = "0.1.0"
authors = ["Matej Sloboda"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdnative = { git = "https://github.com/GodotNativeTools/godot-rust", rev = "4195027a74fc46f20c33d74a92e15494217a2d1c"}
fnv = "1.0.3"

[lib]
crate-type = ["cdylib"]