[package]
name = "dijkstra_map_for_godot"
version = "0.1.0"
authors = ["Matej Sloboda"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdnative = { version = "=0.9.0", default-features = false, features = [] }
fnv = "1.0.3"
priority-queue = "0.7.0"

[lib]
crate-type = ["cdylib"]
